Too big space between book rows fix

--- a/css/bookshelf.css
+++ b/css/bookshelf.css
@@ -6,7 +6,7 @@
 }
 
 .bookshelf-book {
-	padding: 1.2em 0;
+	padding: 1.2em 0 0.6em;
 }
 .bookshelf-book:after {
 	content: '';
